# FreeDB

./: CMakeLists.txt
src/: File.cpp  File.h  Server.cpp  Server.h  Table.cpp  Table.h  Tools.cpp  Tools.h
src/Elements/: Array.cpp  Array.h  Double.cpp  Double.h  Element.cpp  Element.h  Int.cpp  Int.h  Object.cpp  Object.h  Str.cpp  Str.h  double.cpp  double.h
src/Exceptions/: FileNotFound.cpp  FileNotFound.h  FileNotOpened.cpp  FileNotOpened.h
tests/: testFile.cpp  testInt.cpp  testTools.cpp
